samples/_failures_safe/1761702153_5641be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b13f8e8.c: In function ‘main’:
./samples/SAFE/__tmp_8b13f8e8.c:148:12: error: ‘f’ undeclared (first use in this function)
  148 |     while (f
      |            ^
./samples/SAFE/__tmp_8b13f8e8.c:148:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8b13f8e8.c:148:13: error: expected ‘)’ at end of input
  148 |     while (f
      |           ~ ^
      |             )
./samples/SAFE/__tmp_8b13f8e8.c:148:5: error: expected declaration or statement at end of input
  148 |     while (f
      |     ^~~~~
